<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">テーブルクロス</string>
    <string name="facebook_app_id">604908959562677</string>
    <string name="google_api_key">AIzaSyCv4d1MlKkX1HNznlOJoFXcXvW7iEljeMI</string>

    <!-- common -->
    <string name="selectYourArea">あなたの地域を選択してください</string>
    <string name="selectAnArea">都道府県を選択してください</string>
    <string name="moreConvenientIfLogin">ログインすればさらに便利です</string>
    <string name="memberRegistration">会員登録</string>
    <string name="convenientWithoutLogin">ログインせずに利用</string>
    <string name="signUpByFacebook">Facebookでログインメールアドレスで登録</string>
    <string name="signInByFacebook">Facebook から接続してください</string>
    <string name="email">メール</string>
    <string name="phone_">電話番号</string>
    <string name="birthday">生 年 月 日</string>
    <string name="password">パスワード</string>
    <string name="passwordAgain">パスワード確認</string>
    <string name="login">ログイン</string>
    <string name="loading">荷重&#8230;</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="noNetwork">ネットワーク接続がありません。今、ネットワークをインストールしますか？</string>
    <string name="share_success">シェア成功</string>
    <string name="warningNoLogin">あなたはログインする必要があり、この機能を使用するには、ログインする必要はありません？</string>
    <string name="quitApp">アプリケーションを終了してもよろしいですか？</string>
    <string name="confirmLogout">あなたがアカウントをログオフしてもよろしいですか？</string>
    <string name="more">店舗詳細はこちら</string>
    <string name="lunch">ランチ</string>
    <string name="sushiLunch">お寿司・ランチ</string>
    <string name="findHistory">履歴を検索</string>
    <string name="chooseYourBirthday">あなたの誕生日を選択してください</string>
    <string name="requireGooglePlayService">あなたは、Google Play Service アプリ内の機能を使用して、Google map に最新のアップデートが必要です。あなたが正しい更新しますか？</string>

    <!-- sign up -->
    <string name="signUpHeader">新規会員登録</string>
    <string name="signUp">会員登録</string>
    <string name="yourName">お名前</string>
    <string name="register">登録する</string>

    <!-- welcome -->
    <string name="welcome">「テーブルクロス」は、飲食店を予約すると、１人の予約につき途上国のこども１人の給食を届けることができるチャリティー付きグルメアプリです。\n給食費は飲食店からの広告費の一部から賄われる為、ユーザーはチャリティーが無料なだけでなくクーポンも付いてます。</string>

    <!-- sign in -->
    <!-- <string name="signinFacebookFailed">Facebookは失敗したログイン。もう一度やり直してください。</string> -->
    <string name="signinFacebookFailed">Facebookのサインインするに失敗しました</string>
    <!-- <string name="getEmailFacebookFailed">あなたのFacebookのメールを共有していない。もう一度やり直してください。</string> -->
    <string name="getEmailFacebookFailed">電子メールFacebookは失敗しました。取得</string>
    <string name="shareError">株式エラーが発生しました。</string>
    <string name="shareErrorDuplicateError">障害を共有します。\n最新のを共有し、この類似し共有します。共有を登録したり、新しい投稿を削除。</string>
    <string name="shareErrorPostLimit">障害を共有します。\nあなたは常にこのアプリケーションであまりを共有している。しばらくしてからもう一度試してください。</string>
    <string name="shareSuccess">成功を共有します。</string>
    <string name="nameEmpty">あなたの名前は空です。</string>
    <string name="emailEmpty">空のEメール。</string>
    <string name="emailInvalid">電子メールは無効です。</string>
    <string name="passwordEmpty">空のパスワード。</string>
    <string name="passwordNotMatch">パスワードが一致していません。</string>

    <!-- change pass -->
    <string name="changePass">パスワード変更</string>
    <string name="oldPass">古いパスワード</string>
    <string name="newPass">新しいパスワード</string>
    <string name="newPassAgain">新しいパスワード確認</string>
    <string name="change">変更する</string>

    <!-- tab and header -->
    <string name="notification">お知らせ</string>
    <string name="search">店舗検索</string>
    <string name="share">友達に紹介</string>
    <string name="shareTab">友達紹介</string>
    <string name="myPage">エンジェルカウンター</string>
    <string name="myPageTab">カウンター</string>

    <!-- home -->
    <string name="home">ホーム</string>
    <string name="order">予約</string>
    <string name="orderNumber">予約人数</string>
    <string name="orderDate">予約日</string>

    <!-- setting -->
    <string name="identity">身元</string>
    <string name="phone">フォン</string>
    <string name="setting">設定</string>
    <string name="save">保存</string>
    <string name="notice">通知</string>
    <string name="acknowledgmentReservation">予約前日の確認通知</string>
    <string name="storeNameNotify">店舗名通知</string>
    <string name="logout">ログアウト</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>

    <!-- my page -->
    <string name="numberOfMeals">予約をした人数分が途上国のこどもの給食になります\nあなたが支援した給食数</string>
    <string name="numberOfMealsEveryone">あなたがチームで支援した給食数</string>
    <string name="userWhosIntroducedYou1">あなた紹介したユーザーは</string>
    <string name="userWhosIntroducedYou2">人です</string>
    <string name="introducedToFriend">友達にテーブルクロスを紹介する</string>
    <string name="sayALot">友達にテーブルクロスを紹介しよう！\n紹介した友達がお店を予約してもエンジェルカウンターがカウントするよ。\nエンジェルカウンターとは！？</string>

    <!-- search -->
    <string name="conditionSearch">キーワード検索</string>
    <string name="locationSearch">現在地から探す</string>
    <string name="historySearch">履歴から探す</string>
    <string name="featureSearch">カテゴリー検索</string>
    <string name="conditionSearchHint">店舗名・その他キーワード</string>
    <string name="locationSearchHint">1.5km・3km・10km範囲</string>
    <string name="historySearchHint">過去の予約から探す</string>
    <string name="featureSearchHint">和食　洋食　中華</string>
    <string name="searchByKeyword">よく検索されているキーワード</string>
    <string name="restaurantDetail">お店の情報</string>
    <string name="close">閉じる</string>
    <string name="back">戻る</string>

    <!-- share -->
    <string name="connect">コネクト</string>
    <string name="pleaseCall">予約人数を確定して\n通話ボタンを押してください</string>
    <string name="shareDownload1">飲食店を予約すると予約した人数分の給食が途上国のこどもに届けられるエンジェルアプリ！\n『テーブルクロス』はこちらからダウンロード</string>
    <string name="shareDownload2">（紹介者連動URL)</string>
    <string name="shareDownloadTw1">飲食店を予約すると途上国のこどもに給食が\n届けられるエンジェルアプリ</string>
    <string name="shareDownloadTw2">（紹介者連動URL）</string>
    <string name="shareRestaurant1">店舗名\n</string>
    <string name="shareRestaurant2">\n電話番号\n</string>
    <string name="shareRestaurant3">\n住所\n</string>
    <string name="shareRestaurant4">\nURL\n</string>
    <string name="shareRestaurant5">\n日本中の飲食店が世界の飢餓を救う予約アプリ登場！\n外食する前に予約をすると途上国のこどもたちに給食を送ることが出来る、無料エンジェルアプリ「テーブルクロス」はこちらからダウンロード\n</string>
    <string name="shareRestaurant6">\n(紹介者と連動するダウンロードURL)</string>
    <string name="shareOnFacebook">Facebookの上でシェア</string>
    <string name="shareOnTwitter">Twitterの上でシェア</string>
    <string name="shareViaLineApp">Lineアプリを経由して共有</string>
    <string name="introduceShare">テーブルクロスを紹介すると友達が予約した人数分もチャリティカウンターがカウントされます</string>

    <!-- restaurant detail -->
    <string name="clickHere">予約でない電話はこちら\nが押せません。</string>
    <string name="call">通話</string>
    <string name="cancel">キャンセル</string>
    <string name="map">マップ</string>
    <string name="gallery">写真</string>
    <string name="viewImage">写真詳細</string>

    <!-- demo -->
    <string name="demoTime">明日12時00分 </string>
    <string name="demoContent">イタリアン田中を4名で予約されています</string>
    <string name="demoLink">店舗詳細はこちら</string>
    <string name="demoCannotSearch">XXXkｍ 以内のお店から検索できます</string>
    <string name="demoFoodName">恵比寿焼肉</string>
    <string name="demoFoodDescription">東京・恵比寿</string>
    <string name="demoFoodDescriptionLong">私達について:  米国大使館の向かいの駐車場の中にひっそりと佇 む鮨さいとうは、２０１４年前半に六本木へと移転する予定です。駐車場の灯りを頼りに建物に入ると、瞬き一つで見落としてしまう程の隠れ店が赤いカーテンの奥にあります。弁当箱サイズと言われるこじんまりとしたこの店は、小さな鮨カウンターと数える程の客席があるのみです。</string>
    <string name="demoFoodTime">3日前12：30</string>
    <string name="demo"></string>

    <!-- social -->
    <string name="facebook">FACEBOOK</string>
    <string name="twitter">TWITTER</string>
    <string name="google">GOOGLE</string>
    <string name="sms">SMS</string>
    <string name="email_">EMAIL</string>
    <string name="line">LINE</string>

    <string-array name="arrayAreas">
        <item>エリアを選択</item>
    </string-array>

</resources>