<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    style="@style/Layout.FillWidthHeight.Vertical"
    tools:context=".activity.ChangePasswordActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_header" >

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/ic_forma" />

        <TextView
            style="@style/Text.Shadow"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/changePass"
            android:textSize="15sp"
            android:textStyle="normal" />
    </RelativeLayout>

    <LinearLayout
        style="@style/Layout.FillWidthHeight.Vertical"
        android:padding="30dp" >

        <EditText
            android:id="@+id/txtOldPass"
            style="@style/TextBox"
            android:hint="@string/oldPass"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtNewPass"
            style="@style/TextBox"
            android:hint="@string/newPass"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtNewPassAgain"
            style="@style/TextBox"
            android:hint="@string/newPassAgain"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <com.gip.tablecross.widget.AutoBgButton
            android:id="@+id/btnChange"
            style="@style/Button.Orange"
            android:layout_marginTop="20dp"
            android:text="@string/change" />
    </LinearLayout>

</LinearLayout>