<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Layout.FillWidthHeight"
    tools:context=".activity.SignUpActivity" >

    <ImageView
        style="@style/Layout.FillWidthHeight"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_signin" />

    <LinearLayout
        style="@style/Layout.FillWidth.Vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TextView
            style="@style/Text.Shadow"
            android:layout_marginBottom="40dp"
            android:drawablePadding="20dp"
            android:drawableTop="@drawable/logo_app"
            android:text="@string/moreConvenientIfLogin"
            android:textStyle="normal" />

        <LinearLayout style="@style/Layout.FillWidth" >

            <ImageView
                style="@style/Layout.WrapWidthHeight"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/txtEmail"
                style="@style/Text.Content.White"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            style="@style/WhiteDivider"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp" />

        <LinearLayout style="@style/Layout.FillWidth" >

            <ImageView
                style="@style/Layout.WrapWidthHeight"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/txtPassword"
                style="@style/Text.Content.White"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            style="@style/WhiteDivider"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp" />

        <com.bamboo.tablecross.widget.AutoBgButton
            android:id="@+id/btnSignUp"
            style="@style/Text.Shadow"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/color_orange"
            android:text="@string/memberRegistration"
            android:textSize="14sp"
            android:textStyle="normal" />

        <com.bamboo.tablecross.widget.AutoBgButton
            android:id="@+id/btnNoLogin"
            style="@style/Text.Shadow"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/color_orange"
            android:text="@string/convenientWithoutLogin"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

</RelativeLayout>