<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout.FillWidth.Vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_grid_search" >

        <com.gip.tablecross.widget.AutoBgTextView
            android:id="@+id/lblSearchCondition"
            style="@style/LayoutSearchGrid"
            android:drawableTop="@drawable/ic_search_condition"
            android:text="@string/conditionSearch" />

        <View style="@style/GrayDividerVertical" />

        <com.gip.tablecross.widget.AutoBgTextView
            android:id="@+id/lblSearchLocation"
            style="@style/LayoutSearchGrid"
            android:drawableTop="@drawable/ic_search_location"
            android:text="@string/locationSearch" />
    </LinearLayout>

    <View style="@style/GrayDividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_grid_search" >

        <com.gip.tablecross.widget.AutoBgTextView
            android:id="@+id/lblSearchMap"
            style="@style/LayoutSearchGrid"
            android:drawableTop="@drawable/ic_search_map"
            android:text="@string/mapSearch" />

        <View style="@style/GrayDividerVertical" />

        <com.gip.tablecross.widget.AutoBgTextView
            android:id="@+id/lblSearchHistory"
            style="@style/LayoutSearchGrid"
            android:drawableTop="@drawable/ic_search_history"
            android:text="@string/historySearch" />
    </LinearLayout>

    <View style="@style/GrayDividerHorizontal" />

</LinearLayout>