<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout.FillWidthHeight.Vertical"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_item_share_setting"
        android:gravity="center_vertical"
        android:paddingRight="20dp" >

        <ImageView
            android:layout_width="@dimen/size_item_share_setting"
            android:layout_height="@dimen/size_item_share_setting"
            android:scaleType="centerInside"
            android:src="@drawable/ic_facebook" />

        <TextView
            style="@style/Text.Content"
            android:layout_weight="1"
            android:text="@string/facebook" />

        <com.bamboo.tablecross.widget.AutoBgButton
            android:id="@+id/btnShareFacebook"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_white"
            android:text="@string/connect"
            android:textColor="@color/orange"
            android:textSize="13sp" />
    </LinearLayout>

    <View style="@style/GrayDividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_item_share_setting"
        android:gravity="center_vertical"
        android:paddingRight="20dp" >

        <ImageView
            android:layout_width="@dimen/size_item_share_setting"
            android:layout_height="@dimen/size_item_share_setting"
            android:scaleType="centerInside"
            android:src="@drawable/ic_twitter" />

        <TextView
            style="@style/Text.Content"
            android:layout_weight="1"
            android:text="@string/twitter" />

        <com.bamboo.tablecross.widget.AutoBgButton
            android:id="@+id/btnShareTwitter"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_white"
            android:text="@string/connect"
            android:textColor="@color/orange"
            android:textSize="13sp" />
    </LinearLayout>

    <View style="@style/GrayDividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_item_share_setting"
        android:gravity="center_vertical"
        android:paddingRight="20dp" >

        <ImageView
            android:layout_width="@dimen/size_item_share_setting"
            android:layout_height="@dimen/size_item_share_setting"
            android:scaleType="centerInside"
            android:src="@drawable/ic_google" />

        <TextView
            style="@style/Text.Content"
            android:layout_weight="1"
            android:text="@string/google" />

        <com.bamboo.tablecross.widget.AutoBgButton
            android:id="@+id/btnShareGooglePlus"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_white"
            android:text="@string/connect"
            android:textColor="@color/orange"
            android:textSize="13sp" />
    </LinearLayout>

    <View style="@style/GrayDividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_item_share_setting"
        android:gravity="center_vertical"
        android:paddingRight="20dp" >

        <ImageView
            android:layout_width="@dimen/size_item_share_setting"
            android:layout_height="@dimen/size_item_share_setting"
            android:scaleType="centerInside"
            android:src="@drawable/ic_sms" />

        <TextView
            style="@style/Text.Content"
            android:layout_weight="1"
            android:text="@string/sms" />

        <com.bamboo.tablecross.widget.AutoBgButton
            android:id="@+id/btnShareSms"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_white"
            android:text="@string/connect"
            android:textColor="@color/orange"
            android:textSize="13sp" />
    </LinearLayout>

    <View style="@style/GrayDividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_item_share_setting"
        android:gravity="center_vertical"
        android:paddingRight="20dp" >

        <ImageView
            android:layout_width="@dimen/size_item_share_setting"
            android:layout_height="@dimen/size_item_share_setting"
            android:scaleType="centerInside"
            android:src="@drawable/ic_email_gray" />

        <TextView
            style="@style/Text.Content"
            android:layout_weight="1"
            android:text="@string/email_" />

        <com.bamboo.tablecross.widget.AutoBgButton
            android:id="@+id/btnShareEmail"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_white"
            android:text="@string/connect"
            android:textColor="@color/orange"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>